env.sh
Add "-XX:MaxPermSize=512M" param to JAVA_OPTS.